# crud_api_fastapi

./: .gitignore  Dockerfile  README.md  project_database.db  pyproject.toml
src/crud_api/: __init__.py  __main__.py  models.py  utils.py
tests/integration_test/: test_utils_with_sqlite.py
tests/unit_test/: test_models.py
